[project]
name = "alicelora"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.38.0",
    "peft>=0.19.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
]

[tool.uv.sources]
torch = { index = "torch" }
torchvision = { index = "torch" }

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
